New Input tag added

--- a/Form.html
+++ b/Form.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
 	<title> Web Project</title>
@@ -12,6 +12,24 @@
 <input type="text"placeholder="Last Name"  name="name" size="30"> <br> <br>
 <b>Password: </b> 
 <input type="Password" placeholder="Password" name="name" size="30"><br> <br>
+<div>
+	Favorite Color?
+	<br>
+	<input type="radio" name="color" value="red"> Red
+	<input type="radio" name="color" value="green"> Green
+	<input type="radio" name="color" value="blue"> Blue
+</div> <br>
+<div>
+<input name="country" list="countries" placeholder="Country">
+<datalist id="countries">
+	<option value="Bangladesh">
+		<option value="India">
+			<option value="Albania">
+				<option value="Uganda">
+
+	
+</div>
+<br>
 <button> Submit!</button>
 </form>
  </body>
